<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.moviedetail.MovieDetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0.5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginStart="32dp"
            android:background="@drawable/ic_back" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_toolbar_title"
            style="@style/ToolbarTextStyle"
            android:maxLength="30"
            android:maxLines="1"
            android:text="@string/movies_title" />

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/toggle_favorite"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/red"
            android:background="@drawable/toggle_favorite"
            android:textOff=""
            android:textOn=""
            tools:checked="true" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_poster_bg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:alpha="0.5"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_poster"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="125dp"
                android:contentDescription="@string/poster_images"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                style="@style/DetailContentTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="@string/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_poster"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster_bg" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_rating"
                style="@style/DetailRatingText"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/outline_rounded_rectangle"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/rating"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_dots_divider1"
                android:layout_width="10dp"
                android:layout_height="18dp"
                android:gravity="center_horizontal"
                android:text="@string/dot"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_rating"
                app:layout_constraintStart_toEndOf="@+id/tv_rating"
                app:layout_constraintTop_toTopOf="@id/tv_rating" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_date"
                style="@style/DetailTextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                app:layout_constraintBottom_toBottomOf="@+id/tv_dots_divider1"
                app:layout_constraintStart_toEndOf="@+id/tv_dots_divider1"
                app:layout_constraintTop_toTopOf="@+id/tv_dots_divider1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:text="@string/genre"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_rating"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_overview_label"
                style="@style/DetailContentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/overview_label"
                app:layout_constraintStart_toStartOf="@+id/iv_poster"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_overview"
                style="@style/DetailTextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:text="@string/overview_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_overview_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_status_label"
                style="@style/DetailContentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/status_label"
                app:layout_constraintStart_toStartOf="@+id/tv_overview"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_status"
                style="@style/DetailTextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_label"
                app:layout_constraintStart_toStartOf="@+id/tv_status_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_status_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_language_label"
                style="@style/DetailContentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/language_label"
                app:layout_constraintStart_toStartOf="@+id/tv_status"
                app:layout_constraintTop_toBottomOf="@+id/tv_status" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_language"
                style="@style/DetailTextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_label"
                app:layout_constraintStart_toStartOf="@+id/tv_language_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_language_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_creator_label"
                style="@style/DetailContentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/creator_label"
                app:layout_constraintStart_toStartOf="@+id/tv_language"
                app:layout_constraintTop_toBottomOf="@+id/tv_language" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_creator"
                style="@style/DetailTextContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/creator_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_creator_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_creator_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/grey"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>