...

        <com.google.android.material.textview.MaterialTextView
            style="@style/ToolbarTextStyle"
            android:text="@string/title_tv_shows" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_tv_shows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:queryHint="@string/search_tv_shows" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tv_shows"
        style="@style/HomeContentRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="?android:attr/actionBarSize"
...
